# sptlrx-ex

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: cli.rs  client.rs  main.rs  model.rs  server.rs
src/render/: full.rs  mod.rs  pipe.rs  shared.rs
tampermonkey/: sptlrx-ex.user.js
