[package]
description = "Relay synced Spotify Web Player lyrics to your local terminal"
documentation = "https://github.com/yadokani389/sptlrx-ex#readme"
edition = "2024"
homepage = "https://github.com/yadokani389/sptlrx-ex"
license = "MIT OR Apache-2.0"
name = "sptlrx-ex"
readme = "README.md"
repository = "https://github.com/yadokani389/sptlrx-ex"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
jiff = "0.2.22"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "net",
  "sync",
  "time",
] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
